--- a/website/templates/consultaMac.html
+++ b/website/templates/consultaMac.html
@@ -7,5 +7,6 @@
     <input type="text" id="macAddr" name='macAddr' placeholder="MAC ADDRESS">
     <input type="submit" value="Consultar">
 </form>
+    <p> {{ api_data }} </p>
 </div>
 {% endblock %}
